--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="it">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +7,14 @@
     <title>js-campominato-grid</title>
 </head>
 <body>
+    <header>
+        <h1>Campo Minato Grid</h1>
+    </header>
+
+    <main>
+        <div id="grid">
+        </div>
+    </main>
     
     <script src="./js/script.js"></script>
 </body>
