--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    ò<link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <title>js-campominato-grid</title>
 </head>
 <body>
     <header>
-        <h1>Campo Minato Grid</h1>
+        <h1>Campo Minato</h1>
     </header>
 
     <main>
